# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turtle2img"
version = "1.0.0"
description = "Converts images drawn with turtle to jpg or png"
readme = "README.md"
authors = [
    {name = "Wojciech Muła"},
    {name = "An-20"}
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics"
]
keywords = ["turtle", "image", "png", "jpg"]
dependencies = [
    "Pillow<=8.0.0",
    "CairoSVG<=2.5.0"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/An-20/turtle2img"

[project.scripts]
realpython = "reader.__init__"
